modify the code to follow the style guide

--- a/index.html
+++ b/index.html
@@ -1,61 +1,65 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=dovice-width, initial-scale=1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Protfolio Site</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
     <div class="container">
-      <div class="row headline">
+      <header class="row headline">
         <div class="col-2">
           <img src="img/udacity.svg" class="img-responsive headimg" alt="udacity logo">
         </div>
         <div class="col-10">
           <h1 class="text-right" >Cheng Chen</h1>
-          <h6 class="text-right">
+          <p class="text-right">
             Full Stack Developer
-          </h6>
+          </p>
+        </header>
+      </div>
+      <div class="row">
+        <div class="col">
+          <hr>
         </div>
       </div>
-      <hr />
       <div class="row addpad">
         <div class="col">
-          <img src="img/NYC.jpg" class="img-responsive midimg" alt="NYC view"  />
+          <img src="img/NYC.jpg" class="img-responsive midimg" alt="NYC view">
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <h2>Featured Work</h2>
+          <h2>Featured Work<h2>
         </div>
       </div>
-      <div class="row">
+      <main class="row">
         <div class="col">
-          <img src="img/stock.jpg" class="img-responsive sameheight" alt="stock buy sell"  />
+          <img src="img/stock.jpg" class="img-responsive sameheight" alt="stock buy sell">
           <article class=myfigcaption>
             <h3>Stock Predictor</h3>
             <a href="https://github.com/CaleCC/RNN">https://github.com/CaleCC/RNN</a>
           </article>
         </div>
         <div class="col">
-          <img src="img/particle.jpg" class="img-responsive sameheight" alt="particles"  />
+          <img src="img/particle.jpg" class="img-responsive sameheight" alt="particles">
           <article class="myfigcaption">
             <h3>Particle Simulation</h3>
             <a href="https://github.com/CaleCC/applied_parallel">https://github.com/CaleCC/applied_parallel</a>
           </article>
         </div>
         <div class="col">
-          <img src="img/cuda.jpg" class="img-responsive sameheight" alt="cuda logo"  />
+          <img src="img/cuda.jpg" class="img-responsive sameheight" alt="cuda logo">
           <article class="myfigcaption">
             <h3>CudaRNN</h3>
             <a href="https://github.com/CaleCC/RNN">https://github.com/CaleCC/RNN</a>
           </article>
         </div>
-      </div>
+      </main>
 
     </div>
 
