for second review

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
           <p class="text-right">
             Full Stack Developer
           </p>
-        </header>
-      </div>
+        </div>
+      </header>
+
       <div class="row">
         <div class="col">
           <hr>
@@ -34,7 +35,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <h2>Featured Work<h2>
+          <h2>Featured Work</h2>
         </div>
       </div>
       <main class="row">
@@ -60,7 +61,6 @@
           </article>
         </div>
       </main>
-
     </div>
 
 
